Send email message and match - Done!

--- a/.env
+++ b/.env
@@ -9,3 +9,10 @@ DB_PORT_TEST=5432
 DB_NAME_TEST=tests_epg_test
 DB_USER_TEST=postgres
 DB_PASS_TEST=postgres
+
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+ALGORITHM="HS256"
+SECRET_KEY="my_secret_key_with_many_simbol"
+
+MY_EMAIL = "sagorkunchin@gmail.com"
+EMAIL_PASS = "cjzz hlbn yljg qugs"
